# cbilplugin-svn

branches/EditorTweaks/: EditorTweaks-unix.cbp  EditorTweaks.cbp  EditorTweaks.cpp  EditorTweaks.h  manifest.xml
branches/FileManager/: FileExplorer.cpp  FileExplorer.h  FileExplorerUpdater.cpp  FileManager-unix.cbp  FileManager.cbp  FileManager.cpp  FileManager.depend  FileManager.h  Makefile.am  directorymonitor.cpp  manifest.xml  se_globals.cpp  se_globals.h
branches/PowerShell/: CmdConfigDialog.cpp  CmdConfigDialog.h  Makefile.am  PipedProcessCtrl.cpp  PipedProcessCtrl.h  PowerShell-unix.cbp  PowerShell.cbp  PowerShell.cpp  PowerShell.h  ShellCtrlBase.cpp  ShellCtrlBase.h  ToolsPlus-unix.cbp  ToolsPlus.cbp  ToolsPlus.h  manifest.xml  se_globals.cpp  se_globals.h  shellproperties.cpp
branches/ShellExtensions-listener/: FileExplorer.cpp  FileExplorer.h  FileExplorerUpdater.cpp  FileExplorerUpdater.h  FileListener.cpp  FileListener.h  PipedProcessCtrl.cpp  ShellExtensions-unix.cbp  ShellExtensions-unix.depend  ShellExtensions.cbp  directorymonitor.cpp  directorymonitor.h  filesystemmonitor.cpp  filesystemmonitor.h
branches/ToolsPlus/: CmdConfigDialog.cpp  PipedProcessCtrl.cpp  PipedProcessCtrl.h  ShellCtrlBase.h  ToolsPlus-unix.cbp  ToolsPlus.cbp  ToolsPlus.cpp
